--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH0_DOMAIN=...
-REACT_APP_AUTH0_CLIENT_ID=...
-REACT_APP_API_ENDPOINT=...
+REACT_APP_AUTH0_DOMAIN=dev-kqitxjdiju47kmse.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=NNnYQladjTTyxjvjXIpMVGwSh7uPMWlz
+REACT_APP_API_ENDPOINT=https://w2jl0kfhil.execute-api.us-east-1.amazonaws.com/dev/
